/*
 * This file was generated by the Gradle 'init' task.
 *
 * This is a general purpose Gradle build.
 * Learn more about Gradle by exploring our Samples at https://docs.gradle.org/9.1.0/samples
 * This project uses @Incubating APIs which are subject to change.
 */
plugins {
	id 'application'
	id("com.diffplug.spotless") version "8.0.0"
	id 'checkstyle'
}

spotless {

	format 'misc', {
		target '*.gradle', '.gitattributes', '.gitignore'

		trimTrailingWhitespace()
		leadingSpacesToTabs()
		endWithNewline()
	}
	java {
		googleJavaFormat('1.30.0').aosp().reflowLongStrings(true)
		formatAnnotations()
		forbidWildcardImports()

	}
}

checkstyle {
	toolVersion = "12.0.1"
}


java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(25)
	}
}

repositories {
	mavenCentral()
}

dependencies {
	testImplementation(platform("org.junit:junit-bom:6.0.0"))
	testImplementation("org.junit.jupiter:junit-jupiter")
	testRuntimeOnly('org.junit.platform:junit-platform-launcher')
	testImplementation("org.mockito:mockito-core:5.20.0")

	implementation(libs.guava)
}

application {
	mainClass = 'com.quarteredge.QuarterEdgeApplication'
}

test {
	useJUnitPlatform()
	testLogging {
		events "passed", "skipped", "failed"
	}
}
